# CoraCore

./: .gitignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  clippy.toml  justfile  release-please-config.json
crates/cora-cowork-ai-agent/: Cargo.toml
crates/cora-cowork-ai-agent/src/: active_lease.rs  agent_runtime.rs  agent_task.rs  cli_probe.rs  dev_prompt_dump.rs  idle_scanner.rs  lib.rs  registry.rs  registry_config_option_tests.rs  registry_tests.rs  runtime_status.rs  runtime_token.rs  session_context.rs  task_manager.rs  types.rs
crates/cora-cowork-ai-agent/tests/: acp_agent_integration.rs  acp_error_public.rs  acp_module_surface.rs  agent_availability_integration.rs  agent_types_integration.rs  cc_switch_integration.rs  factory_provider_integration.rs  prompt_pipeline_integration.rs  skill_manager_integration.rs
crates/cora-cowork-app/: Cargo.toml
crates/cora-cowork-app/src/: cli.rs  config.rs  lib.rs  main.rs  services.rs
crates/cora-cowork-app/tests/: acp_config_options_e2e.rs  acp_e2e.rs  active_lease_e2e.rs  agent_integration_e2e.rs  assistants_e2e.rs  auth_e2e.rs  auxiliary_e2e.rs  capabilities_cli_e2e.rs  channel_e2e.rs  config_cli_e2e.rs  conversation_e2e.rs  cron_e2e.rs  custom_agent_e2e.rs  diagnose_cli_e2e.rs  extension_e2e.rs  file_e2e.rs  health.rs  local_mode.rs  mcp_e2e.rs  message_e2e.rs  office_e2e.rs  shell_e2e.rs  skills_builtin_e2e.rs  startup_smoke.rs  stt_stream_e2e.rs  system_version_e2e.rs  team_cli_e2e.rs  team_e2e.rs  team_phase1_smoke.rs  websocket_e2e.rs  work_dir_e2e.rs
crates/cora-cowork-assistant/: Cargo.toml
crates/cora-cowork-assistant/src/: agent_catalog.rs  builtin.rs  error.rs  routes.rs  service.rs
crates/cora-cowork-conversation/: Cargo.toml
crates/cora-cowork-conversation/src/: acp_error_recovery.rs  agent_health_policy.rs  convert.rs  error.rs  lib.rs  message_cursor.rs  message_persistence.rs  response_middleware.rs  routes.rs  routes_aux.rs  runtime_completion.rs  runtime_state.rs  service.rs  service_ops.rs  service_test.rs  session_context.rs  skill_resolver.rs  skill_snapshot.rs  startup_recovery.rs  state.rs  stream_persistence.rs  stream_relay.rs  task_options.rs  turn_continuation_policy.rs  turn_orchestrator.rs  turn_recovery_policy.rs
crates/cora-cowork-conversation/tests/: acp_tool_call_persistence.rs  active_lease.rs  conversation_crud.rs  conversation_extended.rs  response_middleware_integration.rs  stream_relay_tips.rs  stream_relay_tool_call.rs
crates/cora-cowork-cron/: Cargo.toml
crates/cora-cowork-cron/src/: artifacts.rs  error.rs  events.rs  executor.rs  routes.rs  scheduler.rs  service.rs  skill_suggest.rs  state.rs  types.rs
crates/cora-cowork-cron/tests/: prompt_test.rs  service_integration.rs  skill_file_test.rs
crates/cora-cowork-db/: Cargo.toml
crates/cora-cowork-db/migrations/: 001_initial_schema.sql  002_legacy_data_normalize.sql  003_agent_acp_capabilities.sql  004_update_bun_agent_package_versions.sql  008_builtin_acp_agents_use_npx.sql  013_agent_connection_snapshot.sql  015_corars_mode_catalog.sql  016_clear_internal_cora_cli_command_override.sql  017_drop_conversation_assistant_identity_snapshot.sql  018_reset_builtin_assistant_enabled.sql  019_assistant_thought_level_defaults.sql  020_update_codex_acp_package_scope.sql  021_codex_agent_full_access_yolo_id.sql  022_cron_execution_dedup.sql  023_add_pi_builtin_acp_agent.sql  024_drop_unused_assistant_definition_fields.sql  025_sync_and_add_acp_registry_agents.sql  026_clear_bridge_agent_command_override.sql  027_provider_model_settings.sql
crates/cora-cowork-db/src/: database.rs  error.rs  instance_lock.rs  legacy_handoff.rs  lib.rs
crates/cora-cowork-db/tests/: acp_registry_contract_migration.rs  agent_binding_resolver.rs  assistant_data_unification_schema.rs  assistant_definition_field_removal_migration.rs  channel_repository.rs  client_preference_repository.rs  codex_full_access_mode_migration.rs  conversation_repository.rs  conversation_schema.rs  cron_assistant_first_migration.rs  cron_repository.rs  db_lifecycle.rs  feedback_diagnostics_repository.rs  legacy_handoff.rs  mcp_server_repository.rs  oauth_token_repository.rs  pi_acp_agent_migration.rs  provider_model_settings_migration.rs  provider_repository.rs  registry_binary_agents_migration.rs  registry_npx_agents_migration.rs  remote_agent_repository.rs  settings_repository.rs  skill_management_schema.rs  team_repository.rs  user_repository.rs
crates/cora-cowork-extension/: Cargo.toml
crates/cora-cowork-extension/src/: classifier.rs  constants.rs  error.rs  external_paths.rs  hub_routes.rs  lib.rs  lifecycle.rs  loader.rs  manifest.rs  registry.rs  routes.rs  skill_routes.rs  skill_service.rs  state.rs  types.rs  types_tests.rs
crates/cora-cowork-extension/tests/: assistant_dispatch_test.rs  contribution_resolution_test.rs  cron_skill_resolve_test.rs  dependency_management_test.rs  extension_loading_test.rs  hub_test.rs  lifecycle_hooks_test.rs  manifest_validation_test.rs  permission_system_test.rs  registry_test.rs  skill_integration_test.rs  skill_service_materialize.rs  startup_materialize.rs  state_persistence_test.rs  template_resolution_test.rs
crates/cora-cowork-file/: Cargo.toml
crates/cora-cowork-file/src/: browse.rs  routes.rs  service.rs  traits.rs  types.rs  watch_service.rs
crates/cora-cowork-file/tests/: directory_browsing.rs  file_management.rs  file_read_write.rs  file_watching.rs  image_processing.rs  snapshot.rs  zip_packaging.rs
crates/cora-cowork-mcp/: Cargo.toml
crates/cora-cowork-mcp/src/: adapter.rs  error.rs  lib.rs  oauth_service.rs  routes.rs  service.rs  session_injection.rs  sync_service.rs  types.rs
crates/cora-cowork-mcp/tests/: adapter_integration.rs  connection_test_integration.rs  connection_test_path_resolution_integration.rs  file_adapter_integration.rs  (+5 more)
crates/cora-cowork-office/: Cargo.toml
crates/cora-cowork-shell/: Cargo.toml
crates/cora-cowork-system/: Cargo.toml
crates/cora-cowork-team/: Cargo.toml
(+511 files in other folders)
