[package]
name = "cora-cowork-app"
version.workspace = true
edition.workspace = true
exclude = ["data/**"]

[[bin]]
name = "coracore"
path = "src/main.rs"

[features]
default = ["telegram", "lark", "dingtalk", "weixin"]
telegram = ["cora-cowork-channel/telegram"]
lark = ["cora-cowork-channel/lark"]
dingtalk = ["cora-cowork-channel/dingtalk"]
weixin = ["cora-cowork-channel/weixin"]

[dependencies]
cora-cowork-common.workspace = true
cora-cowork-assets.workspace = true
cora-cowork-db.workspace = true
cora-cowork-api-types.workspace = true
cora-cowork-realtime.workspace = true
cora-cowork-auth.workspace = true
cora-cowork-system.workspace = true
cora-cowork-file.workspace = true
cora-cowork-office.workspace = true
cora-cowork-shell.workspace = true
cora-cowork-ai-agent.workspace = true
cora-cowork-mcp.workspace = true
cora-cowork-conversation.workspace = true
cora-cowork-extension.workspace = true
cora-cowork-channel.workspace = true
cora-cowork-team.workspace = true
cora-cowork-team-prompts.workspace = true
cora-cowork-cron.workspace = true
cora-cowork-assistant.workspace = true
cora-cowork-runtime.workspace = true
axum.workspace = true
chrono.workspace = true
dirs.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
reqwest.workspace = true
rmcp = { version = "1.5", features = ["server", "transport-io", "schemars"] }
anyhow.workspace = true
async-trait.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
cora-cowork-api-types.workspace = true
cora-cowork-realtime.workspace = true
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
cora-cowork-ai-agent = { workspace = true, features = ["test-support"] }
base64.workspace = true
git2.workspace = true
http-body-util.workspace = true
rust_xlsxwriter.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
tempfile = "3"
tower = { workspace = true, features = ["util"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
wiremock = "0.6"
