[package]
name = "cora-cowork-conversation"
version.workspace = true
edition.workspace = true

[dependencies]
cora-cowork-common.workspace = true
cora-cowork-db.workspace = true
cora-cowork-api-types.workspace = true
cora-cowork-realtime.workspace = true
cora-cowork-auth.workspace = true
cora-cowork-ai-agent.workspace = true
cora-cowork-extension.workspace = true
cora-cowork-mcp.workspace = true
cora-cowork-runtime.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
regex.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
tracing-subscriber.workspace = true
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
cora-cowork-ai-agent = { workspace = true, features = ["test-support"] }