[package]
name = "cora-cowork-cron"
version.workspace = true
edition.workspace = true

[dependencies]
cora-cowork-common.workspace = true
cora-cowork-db.workspace = true
cora-cowork-api-types.workspace = true
cora-cowork-realtime.workspace = true
cora-cowork-conversation.workspace = true
cora-cowork-ai-agent.workspace = true
cora-cowork-auth.workspace = true
cora-cowork-system.workspace = true
axum.workspace = true
cron.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
cora-cowork-ai-agent = { workspace = true, features = ["test-support"] }
