[package]
name = "cora-cowork-db"
version.workspace = true
edition.workspace = true

[dependencies]
cora-cowork-common.workspace = true
sqlx = { workspace = true, features = ["migrate"] }
async-trait.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
