[package]
name = "cora-cowork-extension"
version.workspace = true
edition.workspace = true

[dependencies]
cora-cowork-common.workspace = true
cora-cowork-db.workspace = true
cora-cowork-api-types.workspace = true
cora-cowork-realtime.workspace = true
cora-cowork-runtime.workspace = true
async-trait.workspace = true
axum.workspace = true
dirs.workspace = true
fs2.workspace = true
include_dir.workspace = true
semver.workspace = true
notify.workspace = true
hex.workspace = true
sha2.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
mime_guess.workspace = true
zip.workspace = true

# NTFS junctions are used on Windows to materialize skill links without
# requiring `SeCreateSymbolicLink` (Developer Mode / Admin). Pulled in
# only on Windows targets to avoid building it on Linux/macOS.
[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
async-trait.workspace = true
http-body-util.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
