[package]
name = "cora-cowork-file"
version.workspace = true
edition.workspace = true

[dependencies]
cora-cowork-api-types.workspace = true
cora-cowork-common.workspace = true
cora-cowork-realtime.workspace = true
async-trait.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
walkdir.workspace = true
ignore.workspace = true
notify.workspace = true
zip.workspace = true
git2.workspace = true
reqwest.workspace = true
mime_guess.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
base64.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
