[package]
name = "cora-cowork-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
cora-cowork-runtime.workspace = true
cora-cowork-common.workspace = true
cora-cowork-db.workspace = true
cora-cowork-api-types.workspace = true
cora-cowork-realtime.workspace = true
cora-cowork-system.workspace = true
async-trait.workspace = true
dashmap.workspace = true
axum.workspace = true
dirs.workspace = true
thiserror.workspace = true
oauth2.workspace = true
open.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
