[package]
name = "cora-cowork-office"
version.workspace = true
edition.workspace = true

[dependencies]
cora-cowork-common.workspace = true
cora-cowork-api-types.workspace = true
cora-cowork-realtime.workspace = true
cora-cowork-auth.workspace = true
cora-cowork-file.workspace = true
cora-cowork-runtime.workspace = true
axum.workspace = true
tokio.workspace = true
reqwest.workspace = true
which.workspace = true
calamine.workspace = true
sha1.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
rust_xlsxwriter.workspace = true
tokio = { workspace = true, features = ["test-util"] }
