[package]
name = "cora-cowork-shell"
version.workspace = true
edition.workspace = true

[dependencies]
cora-cowork-common.workspace = true
cora-cowork-api-types.workspace = true
cora-cowork-system.workspace = true
cora-cowork-runtime.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
open.workspace = true
which.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[dev-dependencies]
cora-cowork-db.workspace = true
http-body-util.workspace = true
sqlx.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
wiremock.workspace = true
