[package]
name = "cora-cowork-system"
version.workspace = true
edition.workspace = true

[dependencies]
cora-cowork-auth.workspace = true
cora-cowork-common.workspace = true
cora-cowork-db.workspace = true
cora-cowork-api-types.workspace = true
cora-cowork-realtime.workspace = true
cora-cowork-runtime.workspace = true
axum.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
aws-config.workspace = true
aws-sdk-bedrock.workspace = true
semver.workspace = true
dirs.workspace = true

[dev-dependencies]
tower = { workspace = true }
http-body-util.workspace = true
reqwest.workspace = true
sqlx.workspace = true
wiremock = "0.6"
