[package]
name = "cora-cowork-team"
version.workspace = true
edition.workspace = true

[dependencies]
cora-cowork-common.workspace = true
cora-cowork-db.workspace = true
cora-cowork-api-types.workspace = true
cora-cowork-realtime.workspace = true
cora-cowork-ai-agent.workspace = true
cora-cowork-team-prompts.workspace = true
cora-cowork-auth.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
dashmap.workspace = true
regex.workspace = true
agent-client-protocol = "0.11.1"
futures-util.workspace = true

[dev-dependencies]
sqlx.workspace = true
tokio = { workspace = true, features = ["test-util"] }
futures-util.workspace = true
reqwest.workspace = true
tempfile.workspace = true
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
cora-cowork-ai-agent = { workspace = true, features = ["test-support"] }
